[package]
name = "KEYmouse"
version = "0.1.0"
edition = "2021"

[dependencies]
device_query = "1.1.3"
enigo = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
#使用windwos子系统实现无控制台窗口
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
